Add API Documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=
 
 # Exception Handling Properties
 server.error.include-stacktrace=never
+
+# Solves error for integrating swagger
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
