--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,13 @@ server.error.include-stacktrace=never
 
 # Solves error for integrating swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# Exposing actuator endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+info.greet =Greet
+
+# Set up admin server
+spring.boot.admin.client.url=http://localhost:9080
+spring.boot.admin.client.instance.metadata.tags.environment=dev
+info.tags.environment=dev
